-MyMunicipality- added tile that links to UserOpenForms page in order for muniemp to see personal submissions/drafts. Removed empty "Reporting" tile -UserOpenForms/ProcessForms/UserClosedForms/CompanyForms- updated presentation and added help text Files modified - [ProcessForms,MyMunicipality,UserOpenForms,UserClosedForms,CompanyForms,pom.xml]

--- a/src/main/webapp/pages/CompanyForms/CompanyForms.html
+++ b/src/main/webapp/pages/CompanyForms/CompanyForms.html
@@ -24,8 +24,14 @@
                     <wm-gridcolumn columnwidth="12" name="gridcolumn4_1">
                         <wm-panel iconclass="wi wi-book-open" autoclose="outsideClick" name="panelOpenForms" title="Open Forms" class="panel-primary">
                             <wm-layoutgrid name="layoutgrid2">
+                                <wm-gridrow name="gridrow9">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn12" padding="unset unset 1em unset">
+                                        <wm-label padding="unset 0.5em unset 0.2em" name="label4" caption="Form submissions that have your company selected are displayed here. &quot;Open&quot; forms are still being processed by the municipality and may require additional attention and interaction."></wm-label>
+                                        <wm-label padding="unset 0.5em unset 0.2em" name="label6" caption="Please use the &quot;Messages&quot; feature on the form itself if you have any questions for the municipality or form submitter regarding the form."></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow3">
-                                    <wm-gridcolumn columnwidth="6" name="gridcolumn3_1" padding="1em unset">
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn3_1">
                                         <wm-composite name="composite1" margin="unset unset unset 0.2em">
                                             <wm-label class="col-md-3 form-control-static" name="label1" caption="Select View" fontweight="bold" width="100px"></wm-label>
                                             <wm-container class="col-md-9" name="container1" width="180px">
@@ -67,8 +73,13 @@
                     <wm-gridcolumn columnwidth="12" name="gridcolumn6">
                         <wm-panel iconclass="wi wi-book-binder" autoclose="outsideClick" title="Closed Forms" class="panel-primary" name="panelClosedForms" margin="1em unset unset unset">
                             <wm-layoutgrid name="layoutgrid3">
+                                <wm-gridrow name="gridrow10">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn14" padding="unset unset 1em unset">
+                                        <wm-label padding="unset 0.5em unset 0.2em" name="label5" caption="Forms with your company selected that are considered &quot;Closed&quot; are displayed here. Form processing is complete for these submissions."></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow3">
-                                    <wm-gridcolumn columnwidth="6" name="gridcolumn3_1" padding="1em unset">
+                                    <wm-gridcolumn columnwidth="6" name="gridcolumn3_1">
                                         <wm-composite name="composite1" margin="unset unset unset 0.2em">
                                             <wm-label class="col-md-3 form-control-static" name="label1" caption="Select View" fontweight="bold" width="100px"></wm-label>
                                             <wm-container class="col-md-9" name="container1" width="180px">
