--- a/src/main/webapp/pages/ProcessForms/ProcessForms.html
+++ b/src/main/webapp/pages/ProcessForms/ProcessForms.html
@@ -11,9 +11,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
-                    <wm-gridcolumn columnwidth="6" name="gridcolumn3" padding="2em unset">
-                        <wm-label name="label2" caption="Process Forms" fontweight="bold" class="h4"></wm-label>
-                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="6" name="gridcolumn3" padding="2em unset"></wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn4" padding="2em unset">
                         <wm-composite name="composite1" show="bind:Variables.EmployeesMunicipalities.dataSet.content.length > 1">
                             <wm-label class="col-md-3 form-control-static" name="label3" fontweight="bold" caption="Select Municipality"></wm-label>
@@ -23,33 +21,42 @@
                         </wm-composite>
                     </wm-gridcolumn>
                 </wm-gridrow>
-                <wm-gridrow name="gridrow4">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                        <wm-label padding="unset 0.5em" name="label3_1" caption="These forms are currently in a status where you are a member of the &quot;Process Owner Group&quot;."></wm-label>
-                        <wm-label padding="unset 0.5em" name="label4" caption="Click the &quot;View Form&quot; action icon in order to process the form and update its status."></wm-label>
-                    </wm-gridcolumn>
-                </wm-gridrow>
                 <wm-gridrow name="gridrow3">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3_1">
-                        <wm-grid title="" dataset="bind:Variables.ProcessFormsForUserByMunicipality.dataSet" navigation="Classic" name="gridOpenForms" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
-                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
-                            <wm-grid-column binding="formTitle" caption="Form Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="createdBy" caption="Submitted By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="dateSubmitted" caption="Date Submitted" type="string" edit-widget-type="text" show="true" filterwidget="date" readonly="false">{{row.getProperty('dateSubmitted') | toLocalDateString:true}}</wm-grid-column>
-                            <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="formDesign" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="formStatus" caption="Form Status" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="address" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="primaryVendor" caption="Primary Contractor" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                            <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" edit-widget-type="text" show="true" readonly="false"><span>{{(!row.getProperty('balanceDue') ? 0 : row.getProperty('balanceDue')) | toCurrency:'$':2}}</span>
-                            </wm-grid-column>
-                            <wm-grid-column binding="codeEnforcement" caption="Code Enforcement" type="string" widget-type="checkbox" edit-widget-type="text" show="true" readonly="false">
-                                <wm-checkbox scopedatavalue="row['codeEnforcement']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
-                            </wm-grid-column>
-                            <wm-grid-column binding="dateModified" caption="Date Modified" type="string" edit-widget-type="text" show="true" filterwidget="date" readonly="false">{{row.getProperty('dateModified') | toLocalDateString}}</wm-grid-column>
-                            <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Form" action="Variables.goToPage_Forms.invoke()"
-                            disabled="false"></wm-grid-row-action>
-                        </wm-grid>
+                        <wm-panel iconclass="wi wi-sim-card-alert" autoclose="outsideClick" title="Process Forms" name="panelProcessForms" class="panel-primary">
+                            <wm-layoutgrid name="layoutgrid2">
+                                <wm-gridrow name="gridrow5">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn6">
+                                        <wm-label padding="unset 0.5em" name="label3_1" caption="The submitted forms displayed here are currently in a status where you are a member of the &quot;Process Owner&quot; user group. You are responsible for the form while it is in the current status."></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label4" caption="Please review the form and update its status to advance the form to the next step of its process."></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label6" caption="If additional input is required from the user who submitted the form before it can be moved to the next status, you may notify them using the &quot;Messages&quot; feature on the form itself."></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                                <wm-gridrow name="gridrow6">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn8">
+                                        <wm-grid title="" dataset="bind:Variables.ProcessFormsForUserByMunicipality.dataSet" navigation="Classic" name="gridOpenForms" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
+                                            <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
+                                            <wm-grid-column binding="formTitle" caption="Form Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="createdBy" caption="Submitted By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="dateSubmitted" caption="Date Submitted" type="string" edit-widget-type="text" show="true" filterwidget="date" readonly="false">{{row.getProperty('dateSubmitted') | toLocalDateString:true}}</wm-grid-column>
+                                            <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="formDesign" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="formStatus" caption="Form Status" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="address" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="primaryVendor" caption="Primary Contractor" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" edit-widget-type="text" show="true" readonly="false"><span>{{(!row.getProperty('balanceDue') ? 0 : row.getProperty('balanceDue')) | toCurrency:'$':2}}</span>
+                                            </wm-grid-column>
+                                            <wm-grid-column binding="codeEnforcement" caption="Code Enforcement" type="string" widget-type="checkbox" edit-widget-type="text" show="true" readonly="false">
+                                                <wm-checkbox scopedatavalue="row['codeEnforcement']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
+                                            </wm-grid-column>
+                                            <wm-grid-column binding="dateModified" caption="Date Modified" type="string" edit-widget-type="text" show="true" filterwidget="date" readonly="false">{{row.getProperty('dateModified') | toLocalDateString}}</wm-grid-column>
+                                            <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Form" action="Variables.goToPage_Forms.invoke()"
+                                            disabled="false"></wm-grid-row-action>
+                                        </wm-grid>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-panel>
                     </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
