--- a/src/main/webapp/pages/ProcessForms/ProcessForms.html
+++ b/src/main/webapp/pages/ProcessForms/ProcessForms.html
@@ -32,6 +32,16 @@
                                         <wm-label padding="unset 0.5em" name="label6" caption="If additional input is required from the user who submitted the form before it can be moved to the next status, you may notify them using the &quot;Messages&quot; feature on the form itself."></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
+                                <wm-gridrow name="gridrow3">
+                                    <wm-gridcolumn columnwidth="12" name="gridcolumn311_1" padding="1em unset">
+                                        <wm-composite name="composite1" margin="unset unset unset 0.2em">
+                                            <wm-label class="col-md-3 form-control-static" name="label1" caption="Select View" fontweight="bold" width="100px"></wm-label>
+                                            <wm-container class="col-md-9" name="container1" width="180px">
+                                                <wm-select name="selectView" dataset="bind:Variables.SelectView.dataSet" datafield="All Fields" displayfield="viewName" datavalue="bind:Variables.PreferenceForUser.firstRecord"></wm-select>
+                                            </wm-container>
+                                        </wm-composite>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
                                 <wm-gridrow name="gridrow6">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn8">
                                         <wm-grid title="" dataset="bind:Variables.ProcessFormsForUserByMunicipality.dataSet" navigation="Classic" name="gridOpenForms" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
@@ -39,11 +49,14 @@
                                             <wm-grid-column binding="formTitle" caption="Form Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="createdBy" caption="Submitted By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="dateSubmitted" caption="Date Submitted" type="string" edit-widget-type="text" show="true" filterwidget="date" readonly="false">{{row.getProperty('dateSubmitted') | toLocalDateString:true}}</wm-grid-column>
-                                            <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Standard'"
+                                            readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="formDesign" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="formStatus" caption="Form Status" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                             <wm-grid-column binding="address" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                            <wm-grid-column binding="primaryVendor" caption="Primary Contractor" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="primaryVendor" caption="Primary Contractor" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Standard'" readonly="false"></wm-grid-column>
+                                            <wm-grid-column binding="subdivision" caption="Development" show="bind:Widgets.selectView.datavalue.viewName==='Homebuilder'" readonly="undefined"></wm-grid-column>
+                                            <wm-grid-column binding="lot" caption="Lot" show="bind:Widgets.selectView.datavalue.viewName==='Homebuilder'" readonly="undefined"></wm-grid-column>
                                             <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" edit-widget-type="text" show="true" readonly="false"><span>{{(!row.getProperty('balanceDue') ? 0 : row.getProperty('balanceDue')) | toCurrency:'$':2}}</span>
                                             </wm-grid-column>
                                             <wm-grid-column binding="codeEnforcement" caption="Code Enforcement" type="string" widget-type="checkbox" edit-widget-type="text" show="true" readonly="false">
