- removed the ManageForms and CodeSets tiles from CodeEnf dashboard - removed the ManageInspections tile from Inspections dashboard - updated the role descriptions on MunicipalityUsers to reflect this - updated breadcrumbs on ManageGIS/EditGIS to point to MyMuni dashboard instead of Admin dashboard Files modified - [ManageGISData,EditGISRecord,CodeEnforcementDashboard,MunicipalityInspections,MunicipalityUsers]

--- a/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
+++ b/src/main/webapp/pages/MunicipalityUsers/MunicipalityUsers.html
@@ -113,7 +113,7 @@
                                     <wm-gridrow name="gridrow46">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn77">
                                             <wm-label padding="unset 0.5em" name="label54" caption="Inspector Managers are Municipality Employees who have also been granted access to the &quot;Inspections&quot; dashboard."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label70" caption="Like an Inspector, they can perform inspections that have been requested on forms, but they can also schedule/assign inspections and can maintain inspection designs and categories."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label70" caption="Inspector Managers can perform inspections that have been requested on forms and schedule/assign inspections for the municipality."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label65" caption="In addition to being a municipality Subscriber, Inspector Managers must also have the Municipality Employee and Inspector roles." fontweight="bold"></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
@@ -171,8 +171,7 @@
                                 <wm-layoutgrid name="layoutgrid4_1">
                                     <wm-gridrow name="gridrow48">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn79">
-                                            <wm-label padding="unset 0.5em" name="label52" caption="Code Managers are Municipality Employees who have also been granted access to the &quot;Code Enforcement&quot; dashboard."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label71" caption="Like a Code Officer, they can review and process cases, but they can also maintain form designs, form categories, and municipality code sets."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label52" caption="Code Managers are Municipality Employees who have also been granted access to the &quot;Code Enforcement&quot; dashboard. They can review and process &quot;Cases&quot; (which are forms where the &quot;Code Enforcement&quot; setting is selected)."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label67" caption="In addition to being a municipality Subscriber, Code Managers must also have the Municipality Employee and Code Officer roles." fontweight="bold"></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
