--- a/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
+++ b/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
@@ -80,36 +80,8 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn12" padding="2em unset" horizontalalign="center">
-                        <wm-tile width="240px" height="160px" class="bg-primary" name="tileCodeSets" on-click="Variables.goToPage_MunicipalityCodeSets.invoke()" accessroles="CXAdmin,CodeManager,MunicipalityAdmin">
-                            <wm-layoutgrid height="100%" name="layoutgrid8">
-                                <wm-gridrow height="100%" name="gridrow11_2">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn24_1" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-hammer"></wm-icon>
-                                    </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn25_1" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Code Sets" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.svCountOfMunicipalityCodeSets.dataSet[$i]._count" fontsize="3" fontunit="em" class="p"></wm-label>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                            </wm-layoutgrid>
-                        </wm-tile>
-                    </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="2em unset" horizontalalign="center">
-                        <wm-tile width="240px" height="160px" class="bg-primary" name="tileManageForms" on-click="Variables.goToPage_ManageForms.invoke()" accessroles="CodeManager,CXAdmin,MunicipalityAdmin">
-                            <wm-layoutgrid height="100%" name="layoutgrid7_1">
-                                <wm-gridrow height="100%" name="gridrow9">
-                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn19_2" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-assignment"></wm-icon>
-                                    </wm-gridcolumn>
-                                    <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn20" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Manage Forms" class="p" fontsize="1.5" fontunit="em"></wm-label>
-                                        <wm-label name="tileStatLabel" caption="bind:Variables.CountOfFormsForMunicipality.dataSet[$i].count" fontsize="3" fontunit="em" class="p"></wm-label>
-                                    </wm-gridcolumn>
-                                </wm-gridrow>
-                            </wm-layoutgrid>
-                        </wm-tile>
-                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn12" padding="2em unset" horizontalalign="center"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="2em unset" horizontalalign="center"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow10_1">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn21" horizontalalign="center" padding="2em unset"></wm-gridcolumn>
